Spelling Proof Again

--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                         <p>Amidst the chaos when it reached Petchabun, a local named Boonsohng tried to offer it his small amount of jewelries.
                             The beast calmed down and carefully inspected the jewelries before saying its first intelligible word, "More".
                             Soon, the aristocrats all over the country was forced to pay tribute a massive stash of gold before the rooster said "Enough".
-                            Afterwhich the rooster walked eastward, crossing the Mekong river, before mysteriously disappearing.</p>
+                            After which the rooster walked eastward, crossing the Mekong river, before mysteriously disappearing.</p>
                         <h4 class="text-emphasize">1954</h4>
                         <p>In September 1954, a large octopus with the head of <span class="text-emphasize">BALD EAGLE</span> and flew over Thailand,
                             its wing spanned from Kanchanaburi to Chantaburi. The gloom of its silhouette would be there for a year before flying over to Vietnam,
@@ -479,7 +479,7 @@
                     <div class="dropdown-icon"><span></span><span></span></div>
                     <section class="section-content">
                         <p>Although there were abnormally numerous rumors of prior Weltkrake "activities" in Russia, there were no concrete records nor consistent stories of it.
-                            People claimed it looked like a bear</p>
+                            People claimed it looked like a bear.</p>
                         <h4 class="text-emphasize">1914</h4>
                         <p>Weltkrake first appeared in Russia on 28 July 1914. In the form of giant <span class="text-emphasize">OCTOPUS</span> towering over the Winter Palace,
                             this is the first time in recorded history that Weltkrake has been seen in the form of an octopus, but surely not the last.
