--- a/index.html
+++ b/index.html
@@ -382,18 +382,22 @@
             <p>First seen in early mercantilist England, the mystical beast has grown in strength, power and scale.
                 What once were just helpless tortoises now became an octopus large enough to grab the entire planet Earth.</p>
             <p>Initially shunned as a divine creature of chaos, now has been worshipped by many who were blessed by it, and a symbol of fear for those who were gravely harmed.
-                Let's leave ethical judgement to you whom discovered its story...</p>
+                <span class="text-emphasize">Let's leave ethical judgement to you whom discovered its story...</span></p>
             <hr class="separator">
             </div>
         </section>
         <section id="appearance">
             <div class="container">
                 <h2 class="section-heading">APPEARANCE</h2>
-                <p>In modern days Weltkrake appears as an octopus of such colossal scale that its tentacles wraps around the entire planet.
+                <p>In modern days Weltkrake appears as an octopus of such colossal scale that is almost unimaginable.
                     Its massive body, dwarfs even the largest of whales, and its tentacles, not limited to eight, are each longer than any coastline on Earth,
                     tightly gripping the entire Earth. Ironic to its size, Weltkrake can be easily "overlooked",
-                    invisible to the naked eyes which belong to people who do not actively search for it.</p>
-                <p>But it has not always been this huge or powerful. In the past it had taken many forms, tortoises, lion, bear, different kinds of birds and more.</p>
+                    invisible to the naked eyes which belong to people who do not actively search for it. But once you see it,
+                    you can't unsee.</p>
+                <p>But it has not always been this huge or powerful. In the past it had taken many forms, tortoises, lion, bear, different kinds of birds and more.
+                    Its growth is still hotly debated by scholars of theology and science alike.</p>
+                <p><span class="text-emphasize">It is what humanity deserves!<br>
+                    No, it's not! Deception is its strongest ability...</span></p>
                 <hr class="separator">
             </div>
         </section>
@@ -441,6 +445,7 @@
                         <p>The Weltkrake appeared in the form of a <span class="text-emphasize">SILVER EAGLE</span></p>
                         <h4 class="text-emphasize">1931</h4>
                         <p>The Weltkrake appeared in the form of a <span class="text-emphasize">GREEN PHEASANT</span> with suckers all over its head.</p>
+                        <p>Some claim they've seen a flying <span class="text-emphasize">SNAKE</span>, its body similar to a tentacle. The destination was South East Asia.</p>
                         <p>The rest of official records by the Chinese government are still classified.</p>
                     </section>
                 </div>
@@ -464,13 +469,13 @@
                         <p>On 13 July 1893, the Weltkrake appeared in the form of a giant <span class="text-emphasize">GALLIC ROOSTER</span>,
                             with thousands of tentacles extruding from its comb, it terrorized the residents of Bangkok,
                             going on a rampage of trampling shops, and even going to the countryside to peck a wild white elephant to death.</p>
-                        <p>Amidst the chaos when it reached Petchabun, a local named Boonsohng tried to offer it his small amount of jewelries.
+                        <p>Amidst the chaos when it reached Phetchabun, a local named Boonsohng tried to offer it his small amount of jewelries.
                             The beast calmed down and carefully inspected the jewelries before saying its first intelligible word, "More".
                             Soon, the aristocrats all over the country was forced to pay tribute a massive stash of gold before the rooster said "Enough".
                             After which the rooster walked eastward, crossing the Mekong river, before mysteriously disappearing.</p>
                         <h4 class="text-emphasize">1954</h4>
                         <p>In September 1954, a large octopus with the head of <span class="text-emphasize">BALD EAGLE</span> and flew over Thailand,
-                            its wing spanned from Kanchanaburi to Chantaburi. The gloom of its silhouette would be there for a year before flying over to Vietnam,
+                            its wing spanned from Kanchanaburi to Chanthaburi. The gloom of its silhouette would be there for a year before flying over to Vietnam,
                             messing up the climate and crops of farmlands.</p>
                     </section>
                 </div>
@@ -498,6 +503,9 @@
                             It disappeared after reaching the destination of the Iron Curtain.
                     </section>
                 </div>
+                <p>20 March 2003, the Weltkrake materialized from seemingly nothing, larger than a hundred whales, more than a hundred tentacles longer than Tran-Siberian Railway extruded,
+                    each resting on every landmasses and oil rigs of the blue marble.</p>
+                <p><span class="text-emphasize">A horrifyingly marvelous sight.</span></p>
                 <p>TO BE EXPANDED...</p>
                 <hr class="separator">
             </div>
@@ -505,7 +513,8 @@
         <section id="retrospect">
             <div class="container">
                 <h2 class="section-heading">RETROSPECT</h2>
-                <p>After all these observations, in retrospect, <span class="text-emphasize">WHAT DO YOU SEE?</span></p>
+                <p>After all these observations, in retrospect, <span class="text-emphasize">DO YOU FINALLY SEE IT, YET?</span></p>
+                <p>Hint: These are not random stories, they mean something...</p>
             </div>
         </section>
     </main>
