--- a/index.html
+++ b/index.html
@@ -396,8 +396,9 @@
                     you can't unsee.</p>
                 <p>But it has not always been this huge or powerful. In the past it had taken many forms, tortoises, lion, bear, different kinds of birds and more.
                     Its growth is still hotly debated by scholars of theology and science alike.</p>
-                <p><span class="text-emphasize">It is what humanity deserves!<br>
-                    No, it's not! Deception is its strongest ability...</span></p>
+                <p><span class="text-emphasize">"It is what humanity deserves!"<br>
+                    "No, it's not!"<br>
+                    Deception is its strongest ability...</span></p>
                 <hr class="separator">
             </div>
         </section>
@@ -505,7 +506,8 @@
                 </div>
                 <p>20 March 2003, the Weltkrake materialized from seemingly nothing, larger than a hundred whales, more than a hundred tentacles longer than Tran-Siberian Railway extruded,
                     each resting on every landmasses and oil rigs of the blue marble.</p>
-                <p><span class="text-emphasize">A horrifyingly marvelous sight.</span></p>
+                <p><span class="text-emphasize">A horrifyingly marvelous sight.<br>
+                It has to feed on something, but I don't know what!</span></p>
                 <p>TO BE EXPANDED...</p>
                 <hr class="separator">
             </div>
