--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
                         <h4 class="text-emphasize">1860</h4>
                         <p>The Weltkrake appeared in the form of a <span class="text-emphasize">BEAR</span> with tentacles instead of its hind legs.</p>
                         <h4 class="text-emphasize">1897</h4>
-                        <p>The Weltkrake appeared in the form of a <span class="text-emphasize">SILVER EAGLE</span></p>
+                        <p>The Weltkrake appeared in the form of a <span class="text-emphasize">SILVER EAGLE</span>.</p>
                         <h4 class="text-emphasize">1931</h4>
                         <p>The Weltkrake appeared in the form of a <span class="text-emphasize">GREEN PHEASANT</span> with suckers all over its head.</p>
                         <p>Some claim they've seen a flying <span class="text-emphasize">SNAKE</span>, its body similar to a tentacle. The destination was South East Asia.</p>
@@ -458,7 +458,7 @@
                             The discoveries and theories made by great German minds are still notable.</p>
                         <h4 class="text-emphasize">1895</h4>
                         <p>A German biologist named Röhm Felder proposed a theory that the mystical beasts in China, and the Golden Lion in the United Kingdom were connected.
-                            And he even suggested that it had something to do with the rooster in Siam</p>
+                            And he even suggested that it had something to do with the rooster in Siam. he gave it the name <span class="text-emphasize">WELTKRAKE</span>.</p>
                     </section>
                 </div>
                 <div id="th" class="toggle-block">
