--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         }
 
         .nav-toggle-button:hover {
-            transform: rotate(90deg);
+            transform: translateX(15px);
         }
 
         .nav-toggle-button span{
