--- a/index.html
+++ b/index.html
@@ -115,6 +115,18 @@
             }
         }
 
+        @media (max-width: 550px) {
+            .banner-container {
+                margin-bottom: -175px;
+            }
+        }
+
+        @media (max-width: 360px) {
+            .banner-container {
+                margin-bottom: -100px;
+            }
+        }
+
         body {
             margin: 0;
             padding: 0;
